--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   </head>
  
   <body>
-    Hello World
+    <div>
+        <img src="images/rafialamsyah.jpeg" alt="profile image"/>
+        <h2> Rafi Alamsyah</h2>
+    </div>
   </body>
  
 </html>
