Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   </head>
  
   <body>
-    <div>
-        <img src="images/rafialamsyah.jpeg" alt="profile image"/>
-        <h2> Rafi Alamsyah</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/rafialamsyah.jpeg" alt="profile image"/>
+        <h2 id="profile-name"> Rafi Alamsyah</h2>
     </div>
   </body>
  
