added new div as header container with id = header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
  
   <body>
+    <div id="header">header</div>
     <div id="profile-container">
         <img id="profile-image" src="images/rafialamsyah.jpeg" alt="profile image"/>
         <h2 id="profile-name"> Rafi Alamsyah</h2>
